monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "grafana.example.com" # 도메인 수정
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: courm-grafana
              port:
                number: 80
